[gd_scene load_steps=2 format=3 uid="uid://crmskecpud0sa"]

[ext_resource type="Script" uid="uid://dwhd2xa4wlqu6" path="res://Units/Enemy/enemy_collision_component.gd" id="1_uiqrd"]

[node name="EnemyCollisionComponent" type="Area2D"]
script = ExtResource("1_uiqrd")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
